<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.fragments.DetailsBeerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivDetailsBeer"
            android:layout_width="@dimen/description_img_size"
            android:layout_height="@dimen/description_img_size"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="@dimen/common_padding_extra"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvTitleDescriptionBeer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/details_name"
            android:maxLines="@integer/liner_title_details_beer"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/common_padding_extra"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDetailsBeer"/>

        <TextView
            android:id="@+id/tvKeyId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/details_id"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvValueId"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleDescriptionBeer"/>

        <TextView
            android:id="@+id/tvValueId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/value_default"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toEndOf="@+id/tvKeyId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleDescriptionBeer"/>

        <TextView
            android:id="@+id/tvKeyTagline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/details_tagline"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvValueId"
            app:layout_constraintTop_toBottomOf="@+id/tvValueId"/>

        <TextView
            android:id="@+id/tvValueTagline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/value_default"
            android:maxLines="@integer/liner_tagline_details_beer"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toEndOf="@+id/tvKeyId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvValueId"/>

        <TextView
            android:id="@+id/tvKeyPh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/details_ph"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvValueId"
            app:layout_constraintTop_toBottomOf="@+id/tvValueTagline"/>

        <TextView
            android:id="@+id/tvValuePh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/value_default"
            android:maxLines="@integer/liner_tagline_details_beer"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toEndOf="@+id/tvKeyId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvValueTagline"/>

        <TextView
            android:id="@+id/tvKeyAttenuationLevel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/details_attenuation_level"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvValueId"
            app:layout_constraintTop_toBottomOf="@+id/tvValuePh"/>

        <TextView
            android:id="@+id/tvValueAttenuationLevel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/value_default"
            android:maxLines="@integer/liner_tagline_details_beer"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toEndOf="@+id/tvKeyId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvValuePh"/>

        <TextView
            android:id="@+id/tvKeyAbv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/details_abv"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvValueId"
            app:layout_constraintTop_toBottomOf="@+id/tvValueAttenuationLevel"/>

        <TextView
            android:id="@+id/tvValueAbv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/value_default"
            android:maxLines="@integer/liner_tagline_details_beer"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toEndOf="@+id/tvKeyId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvValueAttenuationLevel"/>

        <TextView
            android:id="@+id/tvKeyDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/details_description"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvValueId"
            app:layout_constraintTop_toBottomOf="@+id/tvValueAbv"/>

        <TextView
            android:id="@+id/tvValueDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/value_default"
            android:maxLines="@integer/liner_tagline_details_beer"
            android:layout_marginTop="@dimen/common_padding_default"
            app:layout_constraintStart_toEndOf="@+id/tvKeyId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvValueAbv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>